k/traefik/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ts-traefik
spec:
  entryPoints:
    - https9605
  routes:
    - kind: Rule
      match: PathPrefix(`/api`)
      services:
        - kind: TraefikService
          name: api@internal
    - kind: Rule
      match: PathPrefix(`/`)
      services:
        - kind: TraefikService
          name: dashboard@internal
  tls:
    secretName: default-certificate
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ts-traefik-websecure
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: HostRegexp(`traefik\.{domain:.+}`) && PathPrefix(`/api`)
      services:
        - kind: TraefikService
          name: api@internal
    - kind: Rule
      match: HostRegexp(`traefik\.{domain:.+}`) && PathPrefix(`/`)
      services:
        - kind: TraefikService
          name: dashboard@internal
  tls:
    secretName: default-certificate
